--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.biao.previousweather" >
+    package="com.biao.previousweather">
 
     <application
+        android:name=".presenter.MainApplication"
         android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:persistent="true"
+        android:supportsRtl="true">
         <activity
-            android:name=".MainActivity"
+            android:name=".presenter.activity.MainActivity"
+            android:configChanges="keyboard|keyboardHidden|layoutDirection|locale|fontScale|orientation"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
