--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,21 @@ dependencies {
     compile 'com.android.support:support-v4:23.4.0'
     compile files('src/main/jniLibs/fragment.jar')
     compile project(':baseframework')
+    //使用butterknife所需依赖注入
     compile 'com.jakewharton:butterknife:8.0.1'
     apt 'com.jakewharton:butterknife-compiler:8.0.1'
+    //retrofit与okhttp\gson\rxjava\rxandroid组合成超强网络请求框架
+    compile 'com.squareup.retrofit2:retrofit:2.0.2'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.2'
     compile 'io.reactivex:rxjava:1.1.0'
+    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+    compile 'com.squareup.okhttp3:okhttp:3.0.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+    compile 'com.squareup.okio:okio:1.6.0'
+    compile 'com.google.code.gson:gson:2.4'
+    compile files('libs/systembartint-1.0.3.jar')
+
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.github.bumptech.glide:okhttp3-integration:1.4.0@aar'
 }
