--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,21 +2,39 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.biao.previousweather">
 
+    <!--&lt;!&ndash;用于进行网络定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>-->
+    <!--&lt;!&ndash;用于访问GPS定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>-->
+    <!--&lt;!&ndash;获取运营商信息，用于支持提供运营商信息相关的接口&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>-->
+    <!--&lt;!&ndash;用于访问wifi网络信息，wifi信息会用于进行网络定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>-->
+    <!--&lt;!&ndash;这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>-->
+    <!--&lt;!&ndash;用于访问网络，网络定位需要上网&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.INTERNET"/>-->
+    <!--&lt;!&ndash;用于读取手机当前的状态&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.READ_PHONE_STATE"/>-->
+    <!--&lt;!&ndash;写入扩展存储，向扩展卡写入数据，用于写入缓存定位数据&ndash;&gt;-->
+    <!--<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>-->
+    <!--<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>-->
+    <!--<uses-permission android:name="android.permission.READ_LOGS"/>-->
+
     <application
-        android:name=".presenter.MainApplication"
+        android:name=".controls.BaseApplication"
         android:allowBackup="false"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:persistent="true"
-        android:supportsRtl="true">
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".presenter.activity.MainActivity"
+            android:name=".controls.MainActivity"
             android:configChanges="keyboard|keyboardHidden|layoutDirection|locale|fontScale|orientation"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.transpant">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
