--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.0'
+        classpath 'com.android.tools.build:gradle:2.1.2'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath 'me.tatarka:gradle-retrolambda:3.2.3'//加上这句依赖，这会使用retrolambda来编译Java代码
+        classpath 'com.dodola:rocoofix:1.2.6'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
