--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'me.tatarka.retrolambda' //加上这句加,入plugin声明
-apply plugin: 'com.dodola.rocoofix'
+//apply plugin: 'com.dodola.rocoofix'
 
 android {
     compileSdkVersion 23
